Fixed horizontal scrollbar men.html

--- a/css/style.css
+++ b/css/style.css
@@ -839,7 +839,7 @@ hr {
     font-size: 1rem;
   }
   .product-list-item img {
-    max-width: 220px;
+    max-width: 180px;
   }
   .product-detail {
     padding: 20px;
